--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,12 @@
 name: hello-world
 on: push
+
 jobs:
-   hello-world-job:
-      runs-on: ubuntu-latest
-      steps:
-        -name: check out repo code
-         uses: actions/checkout@v3
-        -run: echo "$(cat hello_world.txt)"
+  hello-world-job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: check out repo code
+        uses: actions/checkout@v3
+
+      - name: print file contents
+        run: echo "$(cat hello_world.txt)"
