--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -12,4 +12,4 @@ jobs:
         with:
           node-version: '18.x'
       - run: npm install
-      - run: npm rin build
+      - run: npm run build
