--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -16,6 +16,7 @@ jobs:
 
       - run: npm install
       - run: npm run build
+      - run: npm install --save-dev eslint
 
   test:
     needs: build
