--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -16,7 +16,6 @@ jobs:
 
       - run: npm install
       - run: npm run build
-      - run: npm install --save-dev eslint
 
   test:
     needs: build
@@ -31,6 +30,9 @@ jobs:
           node-version: '18.x'
 
       - run: npm install
+
+      - name: Ensure ESLint is installed
+        run: npm install --save-dev eslint eslint-config-next
 
       - name: Add default ESLint config to avoid prompt
         run: |
