--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           node-version: '18.x'
 
-      - run: npm install
+      - run: npm ci
 
       - name: Ensure ESLint is installed
         run: npm install --save-dev eslint eslint-config-next
