--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -5,22 +5,7 @@ on: push
 jobs: 
   build:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo code
-        uses: actions/checkout@v3
-
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-
-      - run: npm install
-      - run: npm run build
-
-  test:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
+    steps: 
       - name: Checkout repo
         uses: actions/checkout@v3
 
@@ -29,26 +14,24 @@ jobs:
         with:
           node-version: '18.x'
 
-      - run: npm ci
+      - run: npm install
+      - run: npm run build 
 
-      - name: Ensure ESLint is installed
-        run: npm install --save-dev eslint eslint-config-next
+  test: 
+    needs: build
+    runs-on: ubuntu-latest
+    steps: 
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-      - name: Add default ESLint config to avoid prompt
-        run: |
-          if [ ! -f .eslintrc.json ]; then
-            echo '{
-              "extends": "next/core-web-vitals"
-            }' > .eslintrc.json
-          fi
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
 
-      - name: Run ESLint safely
-        run: |
-          if [ ! -f .eslintrc.json ]; then
-            echo '{
-              "extends": "next/core-web-vitals"
-            }' > .eslintrc.json
-          fi
-          npx eslint . --ext .js,.jsx,.ts,.tsx
+      - run: npm install
 
+      - name: Install ESLint (v8)
+        run: npm install --save-dev eslint@8 eslint-config-next
 
+      - run: npm test
